feat: 添加声音库

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   },
   "license": "MIT",
   "readmeFilename": "README.md",
-  "author": "army8735 <army8735@qq.com>"
+  "author": "army8735 <army8735@qq.com>",
+  "dependencies": {
+    "howler": "^2.2.1"
+  }
 }
